Fixes, overflow-x

--- a/calendar.css
+++ b/calendar.css
@@ -1,14 +1,10 @@
 .book-calendar {
   overflow-x: auto;
+  width: 100%;
 }
 .book-calendar-wrapper {
-  width: 750px;
   position: relative;
-  top:0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
+  margin-left: 40px;
 }
 .book-calendar table {
   border-collapse: collapse;
